# WsprForLinux

./: .gitignore  env.example  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.py  test_imports.py  test_whisper_load.py
.specstory/history/: 2025-06-20_14-18-understanding-the-w4l-app-project.md  2025-06-21_10-09-resolve-linter-errors-in-test-files.md  2025-06-21_11-15-add-memory-management-and-cleanup.md  2025-06-21_12-41-next-steps-in-development-plan.md  2025-06-21_23-57-discussing-ui-expectations-and-test-scripts.md
docs/: architecture_overview.md  audio_robustness_guide.md  audio_robustness_specification.md  development_rules.md  devplan.md  directory_structure.md  draftplan.md  linux_specific_assumptions.md  main_window_state_machine.md  memory_management.md  requirements.txt  sample_code.py  silence_detection_guide.md  state_machine_context.txt  unified_configuration_solution.md  wfl_prd.md
docs/sample_logs/: audio_devices.json  config.json  hotkeys.json  settings.json
scripts/: README.md  debug_audio_devices.py  populate_model_metadata.py  setup.sh  show_unified_config.py  test_config_system.py  test_device_configuration.py  test_device_permissions.py  test_device_selection.py  test_gui_basic.py  test_gui_simple.py  test_key_controls.py  test_main_window.py  test_main_window_animated.py  test_main_window_updated.py  test_memory_management.py  test_microphone_access.py  test_model_loading_debug.py  test_settings_silence.py  test_silence_detection.py  test_silence_detection_simple.py  test_state_machine_simple.py  test_stream_error_recovery.py  test_system_tray_app.py  test_unified_config.py  test_waveform_simple.py  test_waveform_visualization.py
src/: __init__.py  main.py
src/audio/: __init__.py  buffer_manager.py  device_config.py  device_detector.py  memory_manager.py  recorder.py  recording_state_machine.py  silence_detector.py
src/gui/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py
(+14 files in other folders)
